fix:docs:继承相关篇

--- a/source/_posts/理解目录.md
+++ b/source/_posts/理解目录.md
@@ -68,8 +68,8 @@
 1. vue的data以函数返回？
    1. 避免变量共享
 
-2. 是否遇到过Vue深层次对象双向绑定后，子组件未监听到更新的情况？怎么解决
-   1. 方法一：使用deep:true,但是由性能问题
+2. 是否遇到过Vue深层次对象双向绑定后，子组件未监听到更新的情况？怎么解决?
+   1. 方法一：使用deep:true,但是有性能问题;
    2. 方法二：使用this.$set
 
 3. vue的响应式怎么做到的？
