--- a/source/_posts/🍓前端知识分类/JS相关类/继承相关.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/继承相关.md
@@ -9,20 +9,24 @@
 6. 组合寄生式继承
 7. ES6 类继承
 
-简介
-1. 原型链继承：思想：将子类型实例的`prototype`指向超类型实例
-1. 借用构造函数：
-   1. 思想：通过 `call()` 或 `apply()`方法，在（将来）新创建的对象上执行超类型构造函数；
-   2. 优点：
-      1. 可向超类型传值
-      2. 可为子类型实例单独定义属性
-   3. 缺点：函数内部定义，代码无法复用；
-2. 组合式继承：结合原型链继承和借用构造函数继承，
-   1. 解决原型链继承：实例引用类型属性共享 和 无法向超类型传值
-   2. 解决借用构造函数继承：代码不可复用问题；
-3. 原型式继承：可以在不必预先定义构造函数的情况下实现继承，本质是执行给定对象的浅拷贝。而复制后的副本还可以得到进一步的改造；
-4. 寄生式继承: 为了解决组合继承模式由于多次调用超类型构造函数而导致的低效率问题
-5. 组合寄生式继承: 集寄生式继承和组合继承的优点于一身，是实现基于类型积尘的最优方式
+<br>
+
+实现思想: 
+
+<br>
+
+1. 原型链继承: 
+   1. 思想: 将 **子类型** 的 `prototype` 指向 **超类型的实例** ;
+2. 借用构造函数: 
+   1. 思想: 通过 `call()` 或 `apply()`方法，在使用new操作符创建子类实例的时候，执行一遍超类型构造函数(⚠️，此时的this是指向实例的) (TO:看new创建函数的过程)
+3. 组合式继承: 
+   1. 思想: 使用原型链实现对 **原型方法** 的继承，而通过借用构造函数实现对 **原型属性的继承**, 从而解决了原型引用属性共享的问题，解决了了构造函数代码复用性差的问题；
+4. 原型式继承: 
+    1. 思想: 对给定的对象执行浅拷贝，并拷贝后的对象上自定义一些方法；
+5. 寄生式继承: 
+   1. 思想: 与原型式继承相比，多了一个步骤 => 定义一个函数，在函数内部对浅拷贝的对象进行方法增强；
+6. 组合寄生式继承: 
+   1. 思想: 与组合继承相比，就是把 `超类型.prototype.constructor = 子类型; 子类型.prototype = 超类型.prototype` 的过程，改为让`超类型的副本`去做;
 
 ## 原型链继承
 
@@ -97,6 +101,9 @@ console.log(instance2.colors); // [ 'red', 'green', 'black' ]
 - 这样一来，就会在 `Son` 对象上执行 `Father` 函数中定义的所有对象初始化代码；
 - 结果，每个 `Son` 的实例都会拥有自己的 `colors`属性 的副本了
 
+
+
+
 ```javascript
 
 /* 借用构造函数实现继承 */
@@ -146,9 +153,14 @@ console.log(instance1.age);   // 25
 
 ```
 
-**仍存在的问题**：方法都在构造函数内部定义，函数复用性差；
 
-- 综上，借用构造函数的方法也很少单独使用
+**总结:**
+1. 缺点：方法都在函数内部定义，代码复用性差；
+2. 优点：
+  1. 可向超类型传值；
+  2. 可为子类型实例单独定义属性;
+
+综上: 借用构造函数的方法也很少单独使用
 
 
 ## 组合继承
@@ -156,7 +168,7 @@ console.log(instance1.age);   // 25
 
 结合原型链继承 和 借用构造函数继承, 发挥二者之长
 
-**实现思路**：使用原型链实现对 **原型属性和方法** 的继承，而通过借用构造函数实现对 **实例属性的继承**
+**实现思路**: 使用原型链实现对 **原型方法** 的继承，而通过借用构造函数实现对 **原型属性的继承**
 
 
 ```javascript
@@ -204,15 +216,20 @@ console.log(instance2.colors); // [ 'red', 'green', 'black' ]
 - 然后，又在该新原型上定义了方法 sayAge()
 - 这样一来，就可以让两个不同的 Son 实例，分别拥有自己的属性————包括colros属性，
 
-组合继承
-优点
-1. 避免了原型链和借用构造函数的缺陷，融合了他们的优点，是最常用的继承方式；
-2. 同时，instanceof 和isPrototypeOf() 也能够用于识别基于组合继承创建的对象； 
-
-缺点：
-1. 无论什么情况下，都会调用两次超类型函数（详见组合式继承部分）；
 
 
+总结
+
+1. 优点
+   1. 结合原型链继承和借用构造函数继承;
+   2. 解决原型链继承：实例引用类型属性共享 和 无法向超类型传值;
+   3. 解决借用构造函数继承：代码不可复用问题;
+   4. 同时，instanceof 和isPrototypeOf() 也能够用于识别基于组合继承创建的对象； 
+2. 缺点：
+   1. 无论什么情况下，都会调用两次超类型函数（详见组合式继承部分）；
+
+
+综上: 组合式继承也是较常用的继承方法；
 
 ## 原型链继承
 
@@ -294,13 +311,14 @@ console.log(instance2.friends); // [ 'Herry', 'Merry', 'cat' ]
 ```javascript
 
 /* 寄生式继承 */
-
+// 要被继承的超类型
 const person = {
   name: "Tom",
   friends: ["Herry", "Merry"]
 };
 
 // 前面的原型式继承函数，该函数并非必须的，任何能够返回新对象的函数都适用于此模式
+// 该函数的目的是浅拷贝传入的对象，并返回
 function object(o) {
   function F() {}
   F.prototype = o;
@@ -308,21 +326,24 @@ function object(o) {
 }
 
 function createAnother(original) {
-  const clone = object(original);
-  // 为新对象添加自己的方法，即，函数内部以某种方式增强对象
+  const clone = object(original); // 此处也可以使用Object.create(origial) 方法实现
+  
+  // 在拷贝的新对象自定义一些想要的方法
   clone.sayHi = function() {
     console.log("hi");
   };
   return clone;
 }
 
-const instance1 = createAnother(person);
+// 这里得到的 `instance1` 和 `instance2` ，即是对person进行浅拷贝，并且自定义了一些方法后的一个对象，与person相比，多了自定的方法而已
+const instance1 = createAnother(person);  
 const instance2 = createAnother(person);
 instance1.sayHi();
 // 修改实例1 的引用属性值
+// 因为是进行的浅拷贝，也就是说，超类型`person`, `instance1`, `instance2`, 都指向同一个内存地址，所以改动一个，另一个的属性值必然会受影响
 instance1.friends.push("cat");
 
-instance2.friends; // [ 'Herry', 'Merry', 'cat' ]
+instance2.friends; // [ 'Herry', 'Merry', 'cat' ] // 改变了
 ```
 
 
@@ -372,18 +393,27 @@ const instance2 = new Son("Marry", 12);
  
 ```
 
-- 第一次调用超类型函数: 发生创建 超类构造函数的实例，并将其赋值给 子类的prototype
-  - Son.prototype 得到两个属性 ：`name` 和`colors`, 他们都是Father的实例属性，只不过现在位于 Son 的原型中
-- 第二次调用超类型函数发生在，当调用 构造函数 `Son` 的时候
-  - 会再一次调用 构造函数 `Father`, 这次是为新对象创建了实例属性 `name` 和`colors`
+**第一次调用超类型函数:** 发生创建 超类构造函数的实例，并将其赋值给 子类的prototype
+- Son.prototype 得到两个属性 ：`name` 和`colors`, 他们都是Father的实例属性，只不过现在位于 Son 的原型中
 
-- 也就是说，有两组 `name` 和`colors` 属性，一组在实例上，一组在 Son原型中，这就是调用两次Father 构造函数的结果
+**第二次调用超类型函数发生在:** 当调用 构造函数 `Son` 的时候
+- 会再一次调用 构造函数 `Father`, 这次是为新对象创建了实例属性 `name` 和`colors`
 
+<br>
 
-寄生组合继承的基本模式如下：
+也就是说，有两组 `name` 和`colors` 属性，一组在实例上，一组在 Son原型中，这就是调用两次Father 构造函数的结果
+
+<br>
+<br>
+
+**寄生组合继承的基本模式如下：**
+
+**首先**，创建函数 `inheritPrototype`,
+该函数创建超类型原型的副本，为副本添加 `constructor` 属性并指向子类型，子类型的原型指向该副本
 
 ```javascript
 /**
+ * @des 
  * @param {Object} son 子类型构造函数
  * @param {Object} father 超类型构造函数
  */
@@ -401,29 +431,31 @@ function inheritPrototype(son, father) {
 
 ```javascript
 /* 寄生组合式继承 */
-// 定义超类型构造函数
+// 1. 定义超类型构造函数
 function Father(name) {
   this.name = name;
   this.colors = ["red", "green"];
 }
 
-// 在超类型的原型上定义方法
+// 2. 在超类型的原型上定义方法
 Father.prototype.sayName = function() {
   console.log(this.name);
 };
 
-// 定义子类型构造函数
+//3.  定义子类型构造函数
 function Son(name, age) {
   Father.call(this, name);  // 第二次调用超类型函数
   this.age = age;
 }
 
+// 4. Father副本.prototype.constructor => Son; Son.prototype => Father副本.prototype
 inheritPrototype(Son, Father)
 
-// 在子类型的原型上添加方法
+// 5. 在子类型的原型上添加方法
 Son.prototype.sayAge = function() {
   console.log(this.age);
 };
+
 ```
 
 
