fix:docs:AMD和ES6

--- a/source/_posts/🍓前端知识分类/JS相关类/数组.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/数组.md
@@ -6,10 +6,12 @@
 
 ```
 ## 数组解构赋值
-### 1。什么叫解构赋值？
+1。什么叫解构赋值？
 - 就是按照一定的规则从数组或者对象中提取到值，然后再赋值给变量
-### 2.书写格式是什么呢？
-- #### 情况一：normal——位置形式对应正确即可
+
+2.书写格式是什么呢？
+情况一：normal——位置形式对应正确即可
+
 ```javascript
 let [a,y,z]=['pig','cat','dog'];    //x,y,c分别正确拿到'pig','cat','dog'
 let [x, [[y], z]] = ['pig', [['cat'], 'dog']];      // x,y,c分别正确拿到'pig','cat','dog'
@@ -19,16 +21,18 @@ let [x,y,z]=['pig','cat','dog'];    //x,y,c分别正确拿到'pig','cat','dog'
 // 不完全解构
 let [x, [y], d] = ['pig', ['cat', 'cow'], 'dog']    //
 ``` 
-- #### 情况二：搭配...运算符
+情况二：搭配...运算符
 ```javascript
 let [x,y, ...z] = [1, 2, 3, 4]        // x = 1; y=2; z=[3,4]
 ```
-- #### 情况三：结构不成功，该变量即为undefined
+情况三：结构不成功，该变量即为undefined
 ```javascript
 let [x] = [];               // x 是undefined
 let [x, y] = ['pig'];       // x='pig';y 是undefined
 ```
-- #### 情况四：=右边不是可遍历的对象就会报错
+
+情况四：=右边不是可遍历的对象就会报错
+
 ```javascript
 // 报错
 let [x] = 1;
@@ -38,18 +42,24 @@ let [x] = undefined;
 let [x] = null;
 let [x] = {};
 ```
-- #### 情况五：只要=右侧有Iterater接口就可以解构
+
+情况五：只要=右侧有Iterater接口就可以解构
+
 ```javascript
 let [x, y, z] = new Set(['a', 'b', 'c']);
 ```
-- #### 情况六：可以解构同时赋初值———!只要只有当一个数组成员严格等于undefined，默认值才会生效。
+
+情况六：可以解构同时赋初值———!只要只有当一个数组成员严格等于undefined，默认值才会生效。
+
 ```javascript
 let [x = true] = [];        //foo=true
 let [x = 1] = [null];       //x =null
 let [x, y = 'pig'] = ['cat']; // x='cat',y='pig'
 let [x, y = 'y'] = ['cat', undefined]; // x='x', y='b'
 ```
-- #### 情况七：默认值可以引用解构赋值的其他变量，但该变量必须已经声明
+
+情况七：默认值可以引用解构赋值的其他变量，但该变量必须已经声明
+
 ```javascript
 let [x = 1, y = x] = [1, 2]; // x=1; y=2
 let [x = y, y = 1] = [];     // ReferenceError: y is not defined
