add:docs:源码学习createElement

--- a/source/_posts/🍓前端知识分类/vue相关类/源码-主线.md
+++ b/source/_posts/🍓前端知识分类/vue相关类/源码-主线.md
@@ -25,47 +25,76 @@ if(complier版本){
 
 ## render
 
-返回一个`VNode`
 
-1. createElement:(在initRender阶段执行的)
-将我们的DOM编译为virtual
 
-```js
-<Templete>
-  <div id='page-container'>
-    {{ message }}
-  </div>
-<Templete/>
+`render`函数会遇到两种情况：
+1. 模版类的化，调用 vm._c方法
+2. 手写的`render`, 调用`vm.$createElement`
 
-<script>
-export default {
-  data(){
-    return {
-      message: 'Hello World!'
-    }
-  }
-}
-</script>
-```
+这两个方法的却比在于参数6，方法1是false, 方法2是true
+而这两个方法，最终都会调用 `createElement`方法，返回一个`VNode`
 
-相当于
 
-```js
-/**
- * @des createElement
- * @param {Function} createElement 
- * @return: 
- */
-render(createElement){
-  return createElement('div', {   
-    attr: {
-      id: '#page-container'
-    }
-  }, this.message)
-}
-```
+<!-- 3. createElement:(在initRender阶段执行的) -->
+<!-- 将我们的DOM编译为virtual -->
+<!--  -->
+<!-- ```js -->
+<!-- <Templete> -->
+  <!-- <div id='page-container'> -->
+    <!-- {{ message }} -->
+  <!-- </div> -->
+<!-- <Templete/> -->
+<!--  -->
+<!-- <script> -->
+<!-- export default { -->
+  <!-- data(){ -->
+    <!-- return { -->
+      <!-- message: 'Hello World!' -->
+    <!-- } -->
+  <!-- } -->
+<!-- } -->
+<!-- </script> -->
+<!-- ``` -->
+
+<!-- 相当于 -->
+
+<!-- ```js -->
+<!-- /** -->
+ <!-- * @des createElement -->
+ <!-- * @param {Function} createElement  -->
+ <!-- * @return:  -->
+ <!-- */ -->
+<!-- render(createElement){ -->
+  <!-- return createElement('div', {    -->
+    <!-- attr: { -->
+      <!-- id: '#page-container' -->
+    <!-- } -->
+  <!-- }, this.message) -->
+<!-- } -->
+<!-- ``` -->
 
 2. proxy: (在initRender阶段执行的)
 对象访问做一个劫持，进行一些判断（如，变量render时未定义、模版否有多个根结点），然后发出一些警告
 
-## 
+## virtual Node-VNode
+
+virtual Node 的出现是因为操作DOM是比较耗费性能的，于是有了virtual Node 来描述DOM，VNode是virtual Node 在vue中的具体应用（借鉴自开源库snabbdom）；
+VNode实际上是一个对象，去描述DOM结点。包含各种属性，如标签名、数据、子节点、键值等属性，还有一些用来拓展VNode的灵活性以及实现一些特殊的feature；
+由于VNode只是映射到真实DOM的渲染，不需要包含操作DOM的方法，所以他是非常轻量和简单的；
+
+virtual Node 除了他的数据结构和定义，映射到真实的DOM实际上要经历VNode的create、diff、patch等过程；
+
+在vue中，create ,即createElement；
+
+## createElement
+
+vue.js使用`createElement`创建`VNode`，定义在 `src/core/create-element.js`中；
+`createElement`实际上是对 `_createElement`做了一层封装，它允许传入的参数更加灵活，在处理完这些参数后，再去调用真正创建 `VNode`的函数 `_createElement`；
+
+=> 见源码-createElement.md
+
+
+大致了解了 `createElement` 创建 `VNode`的过程， 每个 `VNode`都有 `children`, `children` 每个元素也是一个 `VNode`，这样就形成了 **VNode Tree**, 他很好的描述了我们的 **DOM tree**
+
+回到 mountComponent 函数的过程，我们已经知道 `vm._render` 是如何创建了一个 `VNode`，接下来就是要把这个`VNode`渲染为一个真实的DOM并渲染出来，这个过程是通过 vm._update完成的;
+
