add:docs:vue源码update

--- a/source/_posts/🍓前端知识分类/JS相关类/函数柯里化.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/函数柯里化.md
@@ -156,6 +156,17 @@ console.log(curry(add)(1, 2)(3, 4, 5)); // 15
 ```
 
 
+## 应用
+
+实际开发重的应用场景
+
+
+vue源码中的`patch`函数(`_update`的核心)
+
+不同平台的`patch`方法的主要逻辑是相同的，所以这部分公共的部分就托管在core这个大的目录下，差异化部分只需要通过参数来区别，
+这里使用函数柯里化的技巧，通过 `createPatchFUnction` 把差异化参数提前固化，这样不用每次调用patch的时候都传递 `nodeOps` 和 `modules`（省去了每次使用都去判断当前平台，然后再做操作）
+
+
 
 
 # 我的疑问？
