--- a/source/_posts/🍓前端知识分类/vue相关类/源码-主线.md
+++ b/source/_posts/🍓前端知识分类/vue相关类/源码-主线.md
@@ -98,3 +98,13 @@ vue.js使用`createElement`创建`VNode`，定义在 `src/core/create-element.js
 
 回到 mountComponent 函数的过程，我们已经知道 `vm._render` 是如何创建了一个 `VNode`，接下来就是要把这个`VNode`渲染为一个真实的DOM并渲染出来，这个过程是通过 vm._update完成的;
 
+
+## _update
+
+_update 方法的主要作用就是将 VNode 渲染为真实 DOM，定义在 `src/core/instance/lifecycle.js` 中；
+_update 是vue 实例的一个私有方法，他被调用的时机有两个：
+1. 一个是首次渲染；
+2. 另一个是数据更新的时候；(响应式原理)
+
+详见 => _update.md
+
