add:docs:vue-createComponents

--- a/source/_posts/🍓前端知识分类/JS相关类/前端模块化规范.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/前端模块化规范.md
@@ -142,7 +142,7 @@ test.handleAdd(1,2)    // 3
 ES6模块是编译时输出接口，CommonJS模块是运行时加载
 
 
-- 编译时加载: ES6模块不是对象，而是通过 export 命令显式指定输出的代码，import时采用静态命令的形式。即在import时可以指定加载某个输出值，而不是加载整个模块；
+- 编译时加载: **ES6模块不是对象，而是通过 export 命令显式指定输出的代码**，import时采用静态命令的形式。即在import时可以指定加载某个输出值，而不是加载整个模块；
 - 运行时加载：（common.js）模块就是对象，也就是在输入时是先加载整个模块，生成一个对象，然后再从这个对象上面读取方法；
 
 CommonJS 加载的是一个对象（即module.exports属性），该对象只有在脚本运行完才会生成。而 ES6 模块不是对象，它的对外接口只是一种静态定义，在代码静态解析阶段就会生成。
