--- a/source/_posts/🍓前端知识分类/vue相关类/源码-主线.md
+++ b/source/_posts/🍓前端知识分类/vue相关类/源码-主线.md
@@ -108,3 +108,34 @@ _update 是vue 实例的一个私有方法，他被调用的时机有两个：
 
 详见 => _update.md
 
+
+## 组件化
+
+vue 的另一个核心就是允许我们吧页面拆分为多个组件，每个组件依赖的css,jsvascript，模版，图片放在一起开发和维护；
+组件是资源独立的，组件在系统内部可复用，组件和组件之前可以嵌套；
+
+vue组件初始化的一个过程如下
+
+```js
+import Vue from 'vue'
+import App from './App.vue'
+
+var app = new Vue({
+  el:'#app',
+  // 这里的 h 是createElement 方法
+  render: h => h(App)
+})
+```
+
+这段代码是使用render函数去渲染的，不同的是，这次通过 createElement 传入的是一个组件而不是一个原生的标签，如下继续分析这一过程；
+
+## createComponent
+
+
+createComponent 是实现组件化的关键
+
+在分析createElement的实现的时候，最终会调用 _createElement 方法，其中有一段逻辑是对参数tag的判断=> 
+1. 如果一个普通的html标签, (如 div), 则会实例化一个普通的VNode节点;
+2. 如果不是，则通过 createComponent 方法创建一个组件 VNode;
+
+详见 => 源码-createComponent.md 
