add:docs源码-patch

--- a/source/_posts/🍓前端知识分类/vue相关类/源码-主线.md
+++ b/source/_posts/🍓前端知识分类/vue相关类/源码-主线.md
@@ -139,3 +139,10 @@ createComponent 是实现组件化的关键
 2. 如果不是，则通过 createComponent 方法创建一个组件 VNode;
 
 详见 => 源码-createComponent.md 
+
+## patch
+
+patch过程把 VNode 转换成真正的DOM节点。
+通过之前的分析可知，再通过createComponet创建了组件Vnode, 接下来会走到vm._update, 执行vm.`__patch__` 去吧 VNode 转换成真正的DOM节点，但是针对一个普通的VNode节点，VNode创建过程有所不同。
+
+详见 => 源码-patch.md
