--- a/source/_posts/🍓前端知识分类/vue相关类/源码-主线.md
+++ b/source/_posts/🍓前端知识分类/vue相关类/源码-主线.md
@@ -145,4 +145,35 @@ createComponent 是实现组件化的关键
 patch过程把 VNode 转换成真正的DOM节点。
 通过之前的分析可知，再通过createComponet创建了组件Vnode, 接下来会走到vm._update, 执行vm.`__patch__` 去吧 VNode 转换成真正的DOM节点，但是针对一个普通的VNode节点，VNode创建过程有所不同。
 
+patch的整体流程：
+1. createComponent => 
+2. 子组件初始化(init, createComponentInstanceForVnode, 整个子组件的init过程(合并options,lifecycle初始化等和vue一样的初始化过程)) => 
+3. 子组件render(生成子组件的渲染vnode) => 
+4. 子组件patch(渲染子组件的vnode，渲染的过程中如果还有子组件，就递归渲染) ;
+
 详见 => 源码-patch.md
+
+## 合并配置
+
+对于options的合并有两个阶段（合并之后的结果保存在 vm.$options中）：
+1. 外部调用场景下的合并配置是通过 `mergeOptions`, 并遵循一定的合并策略；
+2. 组件合并是通过 `initInternalComponent`, 他的合并更快；
+3. 框架和库的设计都是类似的，自身定义了很多默认配置，同时在初始化阶段传入自定义配置， 然后merge配置，来达到定制化不同需求的目的；
+
+
+详见 => 源码-合并配置.md
+
+
+## 生命周期
+
+主要学习 Vue 生命周期中哥哥钩子函数的执行时机以及顺序
+通过分析知道在 created 钩子函数中可以访问到数据，在 mounted 钩子函数中可以访问到 DOM，在 destroy 钩子函数中可以做一些定时器销毁工作，了解它们有利于我们在合适的生命周期去做不同的事情
+
+详见 => 源码-生命周期.md
+
+
+## 组件注册
+
+了解全局注册和局部注册的区别
+
+详见 => 源码-组件注册.md
