fix:docs:修复一些文章内的错误

--- a/source/_posts/🍓前端知识分类/CSS相关/实现居中.md
+++ b/source/_posts/🍓前端知识分类/CSS相关/实现居中.md
@@ -89,3 +89,17 @@
   }
 }
 ```
+
+## grid容器居中
+
+grid 在其包裹元素中居中
+
+
+```css
+#app{
+  .container{
+    display: grid;
+    justify-content: center;
+  }
+}
+```
