--- a/source/_posts/🍓前端知识分类/JS相关类/数组.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/数组.md
@@ -2,14 +2,15 @@
 
 # Array类型ES6新特性
 
-```javascript
+ 
 
-```
+
 ## 数组解构赋值
-1。什么叫解构赋值？
-- 就是按照一定的规则从数组或者对象中提取到值，然后再赋值给变量
 
-2.书写格式是什么呢？
+解构赋值, 就是按照一定的规则从数组或者对象中提取到值，然后再赋值给变量
+
+**书写格式**
+
 情况一：normal——位置形式对应正确即可
 
 ```javascript
@@ -21,11 +22,18 @@ let [x,y,z]=['pig','cat','dog'];    //x,y,c分别正确拿到'pig','cat','dog'
 // 不完全解构
 let [x, [y], d] = ['pig', ['cat', 'cow'], 'dog']    //
 ``` 
+
+
 情况二：搭配...运算符
+
 ```javascript
 let [x,y, ...z] = [1, 2, 3, 4]        // x = 1; y=2; z=[3,4]
 ```
-情况三：结构不成功，该变量即为undefined
+
+
+
+情况三：解构不成功，该变量即为undefined
+
 ```javascript
 let [x] = [];               // x 是undefined
 let [x, y] = ['pig'];       // x='pig';y 是undefined
@@ -42,6 +50,7 @@ let [x] = undefined;
 let [x] = null;
 let [x] = {};
 ```
+
 
 情况五：只要=右侧有Iterater接口就可以解构
 
@@ -66,9 +75,14 @@ let [x = y, y = 1] = [];     // ReferenceError: y is not defined
 ```
 
 
+
+
+
 ## 扩展运算符（...）
-- **作用**：将一个数组转为用逗号分隔的参数序列。
-- **使用举例**：  
+
+**作用**：将一个数组转为用逗号分隔的参数序列。
+**使用举例**：
+
 ```javascript
     // 例1
     var items1 = [1,2,3]
@@ -103,13 +117,18 @@ let [x = y, y = 1] = [];     // ReferenceError: y is not defined
 ```javascript
     console.log((...[items]));  //报错 Uncaught SyntaxError: Unexpected token ...
 ```
+
+
 ##  Array.from()
-- **作用**：将类数组对象和具有Iterable接口的对象转为数组。
-- **参数**：
-    - （必选）参数1：要转换的对象；
-    - （可选）参数2：用来对每个元素进行处理，将处理后的值放入返回的数组；
-    - （条件）参数3：map函数里用到this关键字，还可以传入Array.from的第三个参数,用力啊绑定this。
-- **使用举例**：  
+将类数组对象和具有Iterable接口的对象转为数组。
+
+**参数**：
+1.（必选）参数1：要转换的对象；
+1.（可选）参数2：用来对每个元素进行处理，将处理后的值放入返回的数组；
+1.（条件）参数3：map函数里用到this关键字，还可以传入Array.from的第三个参数,用力啊绑定this。
+
+**使用举例**：  
+
 ```javascript
     // 例1 >> 对数组中每一项做运算
     var demo21 = [1,2,3,4];
@@ -123,29 +142,53 @@ let [x = y, y = 1] = [];     // ReferenceError: y is not defined
     // 例3 >> 将字符串转为数组
     Array.from('hello')              // [ 'h', 'e', 'l', 'l', 'o' ]
 ```  
-## Array.of()
-- **作用**：将一组值转为数组。
-- **使用举例**：  
-```javascript
-    // 例1 >> 基础用法
-    Array.of(1,2,3)     //[1,2,3]
-    Array.of(3)         //[3]
 
-    //例2 >>A 可用来替代Array()或new Array()
-    Array.of()       //[]
+
+
+
+
+
+## Array.of()
+
+
+将一组值转为数组，如下=>
+
+```javascript
+// 例1 >> 基础用法
+Array.of(1,2,3)     //[1,2,3]
+Array.of(3)         //[3]
+
+
+//例2 >>A 可用来替代Array()或new Array()
+Array.of()       //[]
 ```
+
+
+
+
+
+
 
 ## copyWithin()  
-- **作用**：  
-- **参数**：将指定位置的成员，复制到其他位置，并覆盖原有成员，然后返回当前数组：  
-    - （必选）target：开始替换数据的位置。（若为负，从末尾开始计算）
-    - （可选）start：选取数据开始位置。（默认为 0，若为负，从末尾开始计算）**[）**
-    - （可选）end：选取数据停止位置。（默认等于数组长度，若为负值，从末尾开始计算）**[）**
-- **使用举例**：
+
+将指定位置的成员，复制到其他位置，并覆盖原有成员，然后返回当前数组
+参数：
+1. （必选）target：开始替换数据的位置。（若为负，从末尾开始计算）
+2. （可选）start：选取数据开始位置。（默认为 0，若为负，从末尾开始计算
+3. 可选）end：选取数据停止位置。（默认等于数组长度，若为负值，从末尾开始计算）
+
+
+
 ```javascript
-    // 例1 >>
-    [1, 2, 3, 4, 5].copyWithin(0, 3 ,4) //[4, 2, 3, 4, 5]
+// 例1 >>
+[1, 2, 3, 4, 5].copyWithin(0, 3 ,4) //[4, 2, 3, 4, 5]
 ```
+
+
+
+
+
+
 ## Array.find()和Array.findIndex()
 - **作用**：
     - Array.find()：找出第一个符合条件的数组成员
@@ -172,7 +215,15 @@ let [x = y, y = 1] = [];     // ReferenceError: y is not defined
     const found = [bob, alice].find((name) => name.name == "Alice");
 ```
 
+
+
+
+
+
+
 ## Array.fill()
+
+
 - **作用**：用给定值填充数组
 - **参数**：
     - （必选）给定值
@@ -183,6 +234,12 @@ let [x = y, y = 1] = [];     // ReferenceError: y is not defined
     // 例1 >>
     [1, 2, 3, 4, 5].fill(100,2,3)     //[1,2,100,4,5] ,用100替换，从位置2开始到位置3结束[)
 ```
+
+
+
+
+
+
 
 ## 数组实例的方法entries()，keys() 和 values()
 - **作用**：带有Iterator接口的对象，使用`for...of`循环或手动调用遍历器对象的next方法进行遍历。  
@@ -197,6 +254,12 @@ let [x = y, y = 1] = [];     // ReferenceError: y is not defined
         console.log(item)
     }
 ```
+
+
+
+
+
+
 ## Array.includes()  
 - 作用：表示某个数组是否包含给定的值，返回一个布尔值。
 - 使用举例
@@ -204,6 +267,12 @@ let [x = y, y = 1] = [];     // ReferenceError: y is not defined
     // 例1 >>
     [1, 2, 3, 4, 5].includes(6)     //-1
 ```
+
+
+
+
+
+
 ## Array.flat()和Array.flatMap()
 - 作用：
     - Array.flat()：将嵌套的数组“拉平”，变成一维的数组。
@@ -223,6 +292,12 @@ let [x = y, y = 1] = [];     // ReferenceError: y is not defined
     [1,2,3].map((x)=>{return [x*2]})    //[[2],[4],[6]]
     [1,2,3].flatMap((x)=>{return [x*2]})    //[2,4,6]
 ```
+
+
+
+
+
+
 
 ## 空位
 - Array.from方法会将数组的空位，转为undefined
