--- a/source/_posts/🍓前端知识分类/JS相关类/深拷贝相关.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/深拷贝相关.md
@@ -27,20 +27,34 @@ JSON.parse(JSON.stringify(obj))
 // 报错：Uncaught TypeError: Converting circular structure to JSON
 ```
 
-## 我发现使用map也可以实现深拷贝
 
-- 但是应该有很多种情况没有考虑，比如传进来的如果不是对象
 
-```javascript
-function clone(source) {
-  const iterableArr = Object.entries(source);
-  return Object.fromEntries(new Map(iterableArr));
-}
-```
+<!--  -->
+<!-- ## 我发现使用map也可以实现深拷贝 -->
+<!--  -->
+<!-- - 但是应该有很多种情况没有考虑，比如传进来的如果不是对象 -->
+<!--  -->
+<!-- ```javascript -->
+<!-- function clone(source) { -->
+  <!-- const iterableArr = Object.entries(source); -->
+  <!-- return Object.fromEntries(new Map(iterableArr)); -->
+<!-- } -->
+<!-- ``` -->
+
+
+
+
+
 
 ## 略微升级版
-- 但是应该是很多很多情况没有考虑
-  
+
+1. 解决了循环引用问题
+2. 未考虑symbol类型
+
+WeakMap 与Map的区别是，WeakMap的键只能是对象，否则报错
+WeakMap 作为存储是因为他的键名所引用的对象都是弱引用
+
+
 ```javascript
 /**
  * @des 深拷贝
@@ -48,21 +62,31 @@ function clone(source) {
  * @param {Map} map 
  * @return: 
  */
-function clone(source, map = new WeakMap()) {
-  if (typeof source === "object") {
-    let target = Array.isArray(source) ? [] : {};
-    if (map.get(source)) {
-      return map.get(source);
-    }
-    map.set(source, target);
-    for (let [key, value] of Object.entries(source)) {
-      target[key] = clone(value, map);
-    }
-    return target;
-  } else {
+const clone = function(source, map = new Map()) {
+  // 如果source 不是对象，直接返回即可
+  if (typeof source !== "object") {
     return source;
   }
-}
+
+  // 如果map里已经存有该值，直接返回即可, 为了解决循环引用问题
+  if (map.get(source)) {
+    return map.get(source);
+  }
+
+
+  const target = Array.isArray(source) ? [] : {};
+  map.set(source, target);
+
+  // 对source 上所有的键遍历clone 处理
+  for (let [key, value] of Object.entries(source)) {
+    target[key] = clone(value, map);
+  }
+  return target;
+};
+
+
+let obj = {};
+obj.circleRef = obj;
 ```
 
 
