--- a/source/_posts/🍓前端知识分类/JS相关类/原型和原型链.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/原型和原型链.md
@@ -6,7 +6,7 @@
 ```javascript
 this.prototype = { constructor: this}
 ```
-新函数对象会被赋予一个`prototype`属性，该属性的值是一个包含`constructor`属性且属性值是该新函数的对象。 **这个`prototype`对象是用来存放继承特征的地方**。 
+新函数对象会被赋予一个`prototype`属性，该属性的值是一个包含`constructor`属性且属性值是该新函数的对象。 这个`prototype`对象是用来存放**继承特征**的地方。 
 因为JavaScript没有提供一种方法用来确定哪个函数是存放继承特征的地方，所以每个函数都会得到一个prototype对象，constructor对象没什么用，重要是的`prototype`对象。
 
 `prototype`属性指向函数的原型对象。默认情况下，所有原型对象都会自动获得一个`construct`（构造函数）属性，这个属性包含一个指向`prototype`属性所在函数的指针，而通过这个构造函数，我们还可以为函数原型添加其他属性和方法。
