fix:添加面试总结

--- a/source/_posts/🍓前端知识分类/JS相关类/函数柯里化.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/函数柯里化.md
@@ -2,14 +2,16 @@
 
 
 
-## 初级理解
+## 应用场景
 
-- 如果一个商店每天折扣不同，那么通常写一个函数是这样的，但是这样每次都要输入折扣和价格
+如果一个商店每天折扣不同，那么通常写一个函数是这样的，但是这样每次都要输入折扣和价格
 
 ```javascript
 function discount(dis, price) {
   return dis * 0.01 * price;
 }
+
+
 discount(2, 200)
 discount(4, 200)
 ```
@@ -104,7 +106,7 @@ function curry(fn, ...args) {
 
 
 
-## 升级版（最终代码）
+## 最终版本
 
 
 但是以上写法存在问题，我们只能传递两次参数，要么第一次给一部分，第二次给一部分，要么一次性给出所有参数，然后在调用函数，但是如果我们不确定每次传递参数的 **个数** 和 **次数**
