--- a/source/_posts/🦖工具类/无归类/快捷键.md
+++ b/source/_posts/🦖工具类/无归类/快捷键.md
@@ -9,7 +9,7 @@
     - 重启App即可。
 
 
-## 4. MAC 快捷键
+## MAC 快捷键
 
 **截图** 
 | 功能                                                   | 组合键                        |
@@ -104,3 +104,10 @@
 | 打开最近打开文件列表   | command + P                           |
 | 跳转到指定行           | control + G                           |
 | 跳转到指定文件的指定行 | command + P(输入文件名 + ‘：’ + 行数) |
+
+
+## markdown
+
+| 切换todo | 快捷键    |
+|----------|-----------|
+| 切换todo | option +c |
