--- a/source/_posts/🍓前端知识分类/JS相关类/闭包相关.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/闭包相关.md
@@ -13,26 +13,32 @@
 
 ## 什么是闭包
 
-- 闭包是指有权访问另一个函数作用域中的变量的函数。创建闭包的常见方式，就是在一个函数内部创建另一个函数。
-- 当函数可以 **记住并访问** 其所在的 **词法作用域** ，使函数在他**本身词法作用域以外执行**，就产生了闭包, 实例代码 eg.1
+闭包是指有权访问另一个函数作用域中的变量的函数。创建闭包的常见方式，就是在一个函数内部创建另一个函数。
+当函数可以 **记住并访问** 其所在的 **词法作用域** ，使函数在他**本身词法作用域以外执行**，就产生了闭包, 实例代码 eg.1
   
-- 函数showA() 的词法作用域能够访问result()的内部作用域，然后我们将showA() 函数当作一个值类型进行传递
-- 在result()执行之后，他的返回值（也就是showA()函数），showA()函数显然可以在其定义的词法作用域（result()函数的内部作用域）以外的地方执行
-- 在result()函数执行之后呢，我们通常希望result()的整个内部作用域都被销毁，我们知道引擎有垃圾回收机制
-- 但是闭包的神奇之处就在于可以组织这件事情的发生，是因为showA()拥有涵盖 result() 内部作用域的闭包，使得该作用域一直存活，因此没有被回收
-- showA()依然持有对该作用域的引用，这个引用就叫做 **闭包**
 
-```javascript
-// eg.1
-function result() {
-  var a = 1;
-  return function showA() {
+```js
+/* 创建一个闭包 */
+function result(){
+  const a = 1;
+  return function showA(){
     console.log(a)
   }
 }
-result()()  // 1
+result()()
+```
 
-// eg.2
+1. 定义函数 showA 所在的词法作用域即 result 的内部作用域
+2. 执行函数 showA 是全局作用域
+3. 通常result()函数执行之后呢，我们通常希望result()的整个内部作用域都被销毁
+4. 但是由于 showA() 依然持有对该作用域的引用，这个引用就叫做 **闭包**
+
+
+
+
+## 闭包的作用域链
+
+```javascript
 function createComparisonFunction(propertyName) {
   return function(object1, object2) {
     const value1 = object1[propertyName];
@@ -47,11 +53,11 @@ function createComparisonFunction(propertyName) {
   };
 }
 ```
-- 闭包的作用域链（如下图）
+
 
 <img src="/Blog/images/闭包作用域链.png" title="createComparisonFunction和内部函数的作用域链" width="70%" height="50%">
 
-- 无论以何种方式对函数类型的值进行传递，在函数在别处调用时都可以观察到闭包, 可以是在全局作用域中调用局部函数，也可以是在局部作用域中调用另一个局部作用域的函数
+无论以何种方式对函数类型的值进行传递，在函数在别处调用时都可以观察到闭包, 可以是在全局作用域中调用局部函数，也可以是在局部作用域中调用另一个局部作用域的函数
 
 ```javascript
 // 可以是在全局作用域调用局部函数
@@ -86,7 +92,9 @@ a()
 
 ## 闭包和循环
 
-- 作用域链的这种配置机制(见作用域章节)引出了一个副作用，即闭包只能保存某个变量的最后一个值，闭包所保存的是整个变量对象而非某个特殊的变量
+作用域链的这种配置机制(见作用域章节)引出了一个副作用，即闭包只能保存某个变量的最后一个值，闭包所保存的是整个变量对象而非某个特殊的变量
+
+1. 闭包+for循环
 
 ```javascript
 function createFuctions() {
@@ -98,12 +106,56 @@ function createFuctions() {
   }
   return arr
 }
+
+
 createFunctions()[0]()   // 10
 createFunctions()[1]()   // 10
 createFunctions()[2]()   // 10
 
 ```
-- 这个函数返回一个函数数组，表面看，似乎每个函数都应该返回自己的索引值，位置0的函数返回0，位置1的函数返回1，以此类推。但实际上，每个函数都返回10。因为每个函数的作用域链中都保存着createFuctions()函数的活动对象，所以他们引用的都是同一个变量i, 所以在每个函数内部i的值都是10。但是我们可以通过创建一个匿名函数强制让闭包的结果符合预期, 也就是最终的
+
+
+解决方法1: 使用let 定义 i 
+
+```javascript
+function createFuctions() {
+  var arr = new Array()
+  for (var i = 0; i < 10; i++) {
+    arr[i] = function () {
+      return i
+    }
+  }
+  return arr
+}
+
+
+createFunctions()[0]()   // 0
+createFunctions()[1]()   // 1
+createFunctions()[2]()   // 2
+```
+
+解决方法1: arr[i] = 一个立即执行函数
+
+
+```js
+function createFuctions() {
+  var arr = new Array();
+  for (let i = 0; i < 10; i++) {
+    arr[i] = (function() {
+      return i;
+    })();
+  }
+  return arr;
+}
+console.log(createFuctions()[0]);   // 0
+console.log(createFuctions()[1]);   // 1
+```
+
+
+
+这个函数返回一个函数数组，表面看，似乎每个函数都应该返回自己的索引值，位置0的函数返回0，位置1的函数返回1，以此类推。
+但实际上，每个函数都返回10。
+因为每个函数的作用域链中都保存着createFuctions()函数的活动对象，所以他们引用的都是同一个变量i, 所以在每个函数内部i的值都是10。但是我们可以通过创建一个匿名函数强制让闭包的结果符合预期, 也就是最终的
 
 ```javascript
 function createFuctions() {
@@ -121,11 +173,19 @@ console.log(a()[0]())   // 0
 console.log(a()[1]())   // 1
 
 ```
-- 在这个版本中，我们没有直接把闭包赋值给数组，而是定义了一个匿名函数，并将立即执行该匿名函数的结果赋给数组。这个匿名函数有一个参数num, 也就是最终的函数要返回的值。在调用每个函数时，我们传入了参数i, 由于函数参数是按值传递的，所以会将变量i的值复制给参数num, 而这个函数内部，又创建并返回了一个访问num的闭包。 这样一来，result数组内部的每个函数，都有自己num变量的一个副本，因此就可以返回不同的数值。
 
-- for循环和setTimeout拿到正确的值问题
-- 预想的结果每秒一次，每次一个，打印出1-10
-- 实际的结果是1秒后一次打印出 10 个 10
+
+
+在这个版本中，我们没有直接把闭包赋值给数组，而是定义了一个匿名函数，并将立即执行该匿名函数的结果赋给数组；
+这个匿名函数有一个参数num, 也就是最终的函数要返回的值；
+在调用每个函数时，我们传入了参数i, 由于函数参数是按值传递的，所以会将变量i的值复制给参数num, 而这个函数内部，又创建并返回了一个访问num的闭包。 这样一来，result数组内部的每个函数，都有自己num变量的一个副本，因此就可以返回不同的数值。
+
+
+2. 闭包+setTimeout
+
+
+预想的结果: 每秒一次，每次一个，打印出1-10
+实际的结果: 是1秒后一次打印出 10 个 10
 
 ```javascript
 for(var i=0;i<10;i++){
@@ -135,18 +195,19 @@ for(var i=0;i<10;i++){
 }
 ```
 
-- 出现原因
-  - setTimeout的参数一直持有变量i,形成了闭包，
-  - var 声明的i是全局变量
-  - 每次for循环就是将定时器（微任务）加入微任务队列，for循环之后依次执行微任务队列中的任务，而此时的i==10;
-  - 任务队列的十个setTimeout 共享同一个词法作用域，由于循环在定时任务触发之前就已经执行完毕，由于var声明变量具有变量提升的特点，此时的i===10,因此每次取出的的setTimeout任务访问到的i的值都是10
+出现原因
 
-- 解决方法:使用let
-  - let会产生局部作用域
-  - let 不仅将 i 绑定到了 for 循环的块中，事实上循环的每一个迭代它将重新绑定，确保使用上一个循环迭代结束时的值重新进行赋值
+  1. setTimeout的参数一直持有变量i,形成了闭包;
+  2. var 声明的i是全局变量;
+  3. 每次for循环就是将定时器（微任务）加入微任务队列，for循环之后依次执行微任务队列中的任务，而此时的i==10;
+  4. 任务队列的十个setTimeout 共享同一个词法作用域，由于循环在定时任务触发之前就已经执行完毕，由于var声明变量具有变量提升的特点，此时的i===10,因此每次取出的的setTimeout任务访问到的i的值都是10
+
+解决方法1: 使用let
+  1. let会产生局部作用域
+  2. let 不仅将 i 绑定到了 for 循环的块中，事实上循环的每一个迭代它将重新绑定，确保使用上一个循环迭代结束时的值重新进行赋值
 
 ```javascript
-for(var i=0;i<10;i++){
+for(let i=0;i<10;i++){
     setTimeout(function(){
         console.log(i)//10个10
     },1000)
@@ -170,7 +231,9 @@ console.log(a)
 
 ## 闭包和this
 
-- 在闭包中使用`this`对象可能会导致一些问题，this对象是在运行时基于函数的执行环境绑定的：在全局环境中，this等于window; 当函数被当作某个对象的方法调用时，this指向这个对象，不过匿名函数的执行环境具有全局性，因此其this通常指向window（在使用call和apply调用时指向其他对象），有时可能因为编写闭包的方式，这一点可能不那么明显
+在闭包中使用`this`对象可能会导致一些问题，this对象是在运行时基于函数的执行环境绑定的：
+在全局环境中，this等于window; 
+当函数被当作某个对象的方法调用时，this指向这个对象，不过匿名函数的执行环境具有全局性，因此其this通常指向window（在使用call和apply调用时指向其他对象），有时可能因为编写闭包的方式，这一点可能不那么明显
 
 ```javascript
 const name = "The Window";
@@ -242,8 +305,10 @@ function demo() {
     },
   }
 }
+
 var Demo1 = demo()
 var Demo2 = demo()
+
 console.log(Demo1.add1()) // 2
 console.log(Demo2.add1()) // 2
 ```
@@ -275,7 +340,10 @@ var demo = (function () {
     }
   }
 }())
+
 var demo2 = demo
+
+
 console.log(demo.add1())  // 2
 console.log(demo2.add1()) // 3
 
