--- a/source/_posts/🍓前端知识分类/性能优化类/防抖和节流.md
+++ b/source/_posts/🍓前端知识分类/性能优化类/防抖和节流.md
@@ -1,7 +1,10 @@
+# 防抖和节流
+
+
 ## 防抖
 高频事件在规定的事件只执行一次，如规定的时间内再次触发，则重新计算时间
 
-### 防抖实现方法
+
 
 ```javascript
 /**
@@ -10,8 +13,8 @@
  * @return:
  */
 function debounce(func, wait = 1000) {
-  // 可以放入项目中的公共方法中进行调用（鹅只是省事）
   let timeout;
+
   return function(event) {
     clearTimeout(timeout);
     timeout = setTimeout(() => {
@@ -21,19 +24,26 @@ function debounce(func, wait = 1000) {
 }
 ```
 
+
+
+
 ## 节流
+
 高频时间在规定的时间内不管触发事件多少次，都只定时去执行一次
 
-### 节流1:时间戳
-- 特点
+1. 节流1:时间戳
+
+特点
   - 第一次触发即立即执行
   - 最后一次触发离开后不会再执行
-- 实现思路：设置一个时间戳，调用函数的时候，如果当前的时间戳减去设置的时间错，大于wait,则执行函数；若小于则不执行；
+
+实现思路：设置一个时间戳，调用函数的时候，如果当前的时间戳减去设置的时间错，大于wait,则执行函数；若小于则不执行；
 
 ```javascript
 function throttle(func, wait = 1000) {
   let context, args;
   let previous = 0;
+
   return function() {
     var now = +new Date();
     context = this;
@@ -46,7 +56,7 @@ function throttle(func, wait = 1000) {
 }
 ```
 
-### 节流2:定时器
+2. 节流2:定时器
 - 特点
   - 第一次触发不执行
   - 最后一次触发离开后仍执行执行
