add:docs:添加deno和node区别

--- a/source/_posts/🍓前端知识分类/vue相关类/源码-主线.md
+++ b/source/_posts/🍓前端知识分类/vue相关类/源码-主线.md
@@ -177,3 +177,28 @@ patch的整体流程：
 了解全局注册和局部注册的区别
 
 详见 => 源码-组件注册.md
+
+
+## 异步组件
+
+在平时的开发中，为了减少首屏代码体积，会把一些非首屏的组件设计成异步组件，按需加载，Vue 原生支持异步组件；
+
+异步组件的实现有三种方式，它实现了 loading、resolve、reject、timeout 4 种状态
+异步组件实现的本质是2次渲染，除了 0 delay 的高级异步组件第一次直接渲染成 loading 组件外，其它都是第一次渲染生成一个注释节点
+当异步获取组件成功后，再通过 forceRender 强制重新渲染，这样就能正确渲染出我们异步加载的组件了
+
+
+## 响应式远离
+
+响应式对象是利用 Object.defineProperty() 给对象的属性添加 getter 和 setter
+Vue会把 props 和 data 等变成响应式对象，在创建过程中若发现子属性也为对象，则递归把该对象变成响应式；
+get: 依赖收集
+set: 
+
+
+## 依赖收集
+
+依赖收集就是订阅数据变化的wather的收集
+依赖收集的目的是为了当这些响应式数据发生变化的时候，触发他们的setter的时候，能知道应该通知哪些订阅者去做相应的逻辑处理；
+
+## 派发更新
