--- a/source/_posts/🍓前端知识分类/vue相关类/源码-组件注册.md
+++ b/source/_posts/🍓前端知识分类/vue相关类/源码-组件注册.md
@@ -2,6 +2,9 @@
 
 Vue.js 提供了 2 种组件的注册方式，全局注册和局部注册
 
+
+
+
 ## 全局注册
 
 要注册一个全局组件，可以使用 Vue.component(tagName, options)，如
@@ -54,7 +57,9 @@ export function initAssetRegisters (Vue: GlobalAPI) {
 }
 
 ```
+
 函数首先遍历 ASSET_TYPES，得到 type 后挂载到 Vue 上 :
+
 ```js
 /* src/shared/constants.js */
 export const ASSET_TYPES = [
@@ -63,3 +68,148 @@ export const ASSET_TYPES = [
   'filter'
 ]
 ```
+
+所以实际上，Vue是初始化了3个全局函数，并且如果type 是component 且 defination 是一个对象的话，通过this.options._base.extend, 相当于 Vue.extend吧这个对象转换成一个继承于Vue的构造函数， 最后通过 this.options[type + 's'][id] = defination 把它挂载到 Vue.options.components上。
+
+由于我们每个组件的创建都是通过 Vue.extend 继承而来，我们之前分析过在继承的过程中有这么一段逻辑：
+
+```js
+Sub.options = mergeOptions(
+  Super.options,
+  extendOptions
+)
+```
+
+也就是说它会把 Vue.options 合并到 Sub.options, 也就是组件的 optinons 上;
+然后在组件的实例化阶段，会执行 merge options 逻辑，
+把 Sub.options.components 合并到 vm.$options.components 上;
+
+然后在创建 vnode 的过程中，会执行 _createElement 方法,
+我们再来回顾一下这部分的逻辑，它的定义在 src/core/vdom/create-element.js 中
+
+```js
+export function _createElement(
+  context: Component,
+  tag?: string | Class<Component> | Function | Object,
+  data?: VNodeData,
+  children?: any,
+  normalizationType?: number
+): VNode | Array<VNode> {
+  
+  // ......
+
+  let vnode, ns;
+  if (typeof tag === "string") {
+    let Ctor;
+    ns = (context.$vnode && context.$vnode.ns) || config.getTagNamespace(tag);
+    if (config.isReservedTag(tag)) {
+      // platform built-in elements
+      vnode = new VNode(
+        config.parsePlatformTagName(tag),
+        data,
+        children,
+        undefined,
+        undefined,
+        context
+      );
+    } else if (isDef((Ctor = resolveAsset(context.$options, "components", tag)))) {
+      // component
+      vnode = createComponent(Ctor, data, context, children, tag);
+    } else {
+      // unknown or unlisted namespaced elements
+      // check at runtime because it may get assigned a namespace when its
+      // parent normalizes children
+      vnode = new VNode(tag, data, children, undefined, undefined, context);
+    }
+  } else {
+    // direct component options / constructor
+    vnode = createComponent(tag, data, context, children);
+  }
+  
+  // ......
+
+}
+
+```
+
+这里有一个判断逻辑 `isDef(Ctor = resolveAsset(context.$options, 'components', tag))`，
+先来看一下 resolveAsset 的定义:
+```js
+/* src/core/utils/options.js */
+
+/**
+ * 解决资产。
+ * 使用此功能是因为子实例需要访问
+ * 到其祖先链中定义的资产。
+ */ 
+export function resolveAsset(
+  options: Object,
+  type: string,
+  id: string,
+  warnMissing?: boolean
+): any {
+  /* istanbul ignore if */
+  if (typeof id !== "string") {
+    return;
+  }
+  const assets = options[type];
+  // check local registration variations first
+  if (hasOwn(assets, id)) return assets[id];
+  const camelizedId = camelize(id);
+  if (hasOwn(assets, camelizedId)) return assets[camelizedId];
+  const PascalCaseId = capitalize(camelizedId);
+  if (hasOwn(assets, PascalCaseId)) return assets[PascalCaseId];
+  // fallback to prototype chain
+  const res = assets[id] || assets[camelizedId] || assets[PascalCaseId];
+  if (process.env.NODE_ENV !== "production" && warnMissing && !res) {
+    warn("Failed to resolve " + type.slice(0, -1) + ": " + id, options);
+  }
+  return res;
+}
+
+```
+
+这段逻辑是: 先通过 `const assets = options[type]` 拿到 `assets`，然后再尝试拿 assets[id]，这里有个顺序，
+1. 先直接使用 `id `拿，如果不存在;
+2. 则把 `id` 变成驼峰的形式再拿;
+3. 如果仍然不存在则在驼峰的基础上把首字母再变成大写的形式再拿;
+4. 如果仍然拿不到则报错;
+这样说明了我们在使用 `Vue.component(id, definition)` 全局注册组件的时候，`id` 可以是 **连字符、驼峰、首字母大写** 的形式
+
+回到我们的调用 `resolveAsset(context.$options, 'components', tag)`, 即拿 `vm.$options.components[tag]`,
+这样我们就可以在 `resolveAsset` 的时候拿到这个组件的构造函数，并作为 createComponent 的钩子的参数。??
+
+
+## 局部注册
+
+即在组件内部使用 components 选项做组件的局部注册，eg:
+
+```js
+import HelloWorld from './components/HelloWorld'
+
+export default {
+  components: {
+    HelloWorld
+  }
+}
+```
+
+在组件的 Vue 的实例化阶段有一个合并 option 的逻辑(之前分析过, 见。。)，
+所以就把 components 合并到 vm.$options.components 上，这样我们就可以在 resolveAsset 的时候拿到这个组件的构造函数，并作为 createComponent 的钩子的参数；
+
+
+
+
+
+## 局部注册全局注册的区别
+
+局部注册是只有当前组件才可以访问该组件，因为他是扩展在 Sub 上的；
+全局注册是**扩展到vue.options**下，所以在所有组件创建的过程中，都会从全局的Vue.options.components扩展到当前组件的vm.$options.components下，这就是全局注册的组件能被任意使用的原因；
+
+
+
+
+## 总结
+
+通常组件库的基础组件建议全局注册，而业务组件建议局部注册；
+（因为全局组件是扩展在Vue上的，如果仅使用一次，全局注册浪费）
