--- a/source/_posts/🍓前端知识分类/vue相关类/开发规范.md
+++ b/source/_posts/🍓前端知识分类/vue相关类/开发规范.md
@@ -32,7 +32,7 @@ components/
 |- TodoListItemButton.vue
 components/
 |- SearchSidebar.vue
-|- SearchSidebarNavigation.vu
+|- SearchSidebarNavigation.vue
 ```
 
 4. 组件名中的单词顺序
