--- a/source/_posts/🍓前端知识分类/vue相关类/源码-主线.md
+++ b/source/_posts/🍓前端知识分类/vue相关类/源码-主线.md
@@ -188,7 +188,7 @@ patch的整体流程：
 当异步获取组件成功后，再通过 forceRender 强制重新渲染，这样就能正确渲染出我们异步加载的组件了
 
 
-## 响应式远离
+## 响应式原理
 
 响应式对象是利用 Object.defineProperty() 给对象的属性添加 getter 和 setter
 Vue会把 props 和 data 等变成响应式对象，在创建过程中若发现子属性也为对象，则递归把该对象变成响应式；
