--- a/source/_posts/_考核类/20200709-talking.md
+++ b/source/_posts/_考核类/20200709-talking.md
@@ -54,7 +54,7 @@
 ……
 
 
-1. 期望可以在积累了一定的项目实施经验后可以转公司的研发部门
+1. 期望是否可以在积累了一定的项目实施经验后可以转公司的研发部门
 2. 后面在使用api的基础上去看源码和开发设计模式；
 
 
@@ -66,8 +66,8 @@
 ……
 
 
-1. 对源码的深入理解，
-2. webpack；
+1. 期望自己可以独立应对和管理项目；
+
 
 
 
@@ -78,7 +78,7 @@
 
 1. 不太了解
 2. 不太了解
-(因为长期出差，对公司确实较陌生)
+(因为长期出差，对公司确实较陌生，就是偶尔通知说你现在组长是谁，或看海马汇发现组织架构变了)
 
 
 
@@ -86,10 +86,13 @@
 (例如部门建议、个人诉求等等)
 ……
 
-1. 每个项目是不是可以根据项目大小，至少有一个能力特别强的，而且熟悉当前项目系统的前端负责人；
-   1. 不仅对新人的培养，任务的划分，代码质量的把控都很重要，同时也是项目开发效率
-   2. 因为公司目前的项目很多都是有了一期持续会有二期三期，而二期三期也都是在原本的基础上新开发功能，项目的整体架构，比如高频基础组件封装，公共方法的统一管理，这些比较依赖技术的经验；
-2. 个人诉求：如果可能的话希望可以做研发，或者可以经历一个项目从初期建设开始参与；
+
+部门建议：
+1. 根据经验感觉交付项目总是很忙很累，但是有时候并不是因为任务量过大，感觉和负责人对系统的熟练度或一期代码的结构有很大的关系，所以是不是可以项目上前端负责人是对该系统特别熟悉的；
+ 
+个人诉求
+1. 如果可能的话，希望可以在积累了一定的项目实施静候回园区做研发；
+2. 或者可以经历一个项目从初期建设开始参与；
 
 
 
