--- a/source/_posts/🍓前端知识分类/网络安全类/前端鉴权.md
+++ b/source/_posts/🍓前端知识分类/网络安全类/前端鉴权.md
@@ -1,13 +1,27 @@
 
+## 为什么要鉴权？
 
 HTTP是一种无状态的请求，所以后端不能通过请求来区分和管理请求和响应，也就是说服务无法单从请求上知道客户身份，
-> 一共有三种
+一半鉴权有三种方式
+1. cookies
+2. session
+3. token(jwt 升级版)
 
-cookies
-session
-token
-jwk还是啥的
+
+
+## JWT(J)
+
+我理解是颁发给了一个证书，设置的限定时间内都可以随意访问，但是这个有效时间
+不要设置的太长了
+
+优点
+  1. 不需要操作数据库，直接代码里校验
+
+
+
+
 ## cookies
+
 服务器给客户端颁发的的一个通行证，用来区分客户身份
 后端向前端返回报文的同时，向浏览器写入cookie，用户下次请求会携带cookie，后端查询数据库鉴别用户
 缺点：存储在浏览器，不安全，
@@ -15,6 +29,7 @@ jwk还是啥的
 
 
 ## session
+
 - session是另一种用户记录服务器和客户端会话状态的方式
 - session是一对， sessionId 存在客户端, 对应的session存储在服务端
 - 前端发起请求，携带sessionId(以cookie的形式,也可以放在参数里)，后端去数据库查找并对比
@@ -47,12 +62,6 @@ token一般来说，有三种
 - 用户请求登录后，后端返回一个token,这个token是加密过的， 用户后面的每次请求都要带着token
 优点
 
-## JWT
-我理解是颁发给了一个证书，设置的限定时间内都可以随意访问，但是这个有效时间
-不要设置的太长了
-
-优点
-  1. 不需要操作数据库，直接代码里校验
 
 
 
@@ -67,3 +76,84 @@ token一般来说，有三种
  * 4. 客户端每次请求都带有token, 可以将其放在请求头里面，每次请求都携带token
  * 5. 服务端验证token, 所有需要校验身份的接口都会被校验token, 若token解析后的数据包含用户身份信息，则返回数据，否则抛出错误
  */
+
+## JWT 
+
+JWT由三部分组成：
+1. header 头部
+2. payload  载荷
+3. signature 签证
+
+
+### header
+
+1. 声明类型， 这是jwt
+2. 声明类型的算法，通常直接使用 HMAC SHA256
+
+完整的头部如下
+
+```js
+{
+  'typ': 'jwt',
+  'alg': 'HS256'
+}
+```
+
+然后将头部进行base64加密，该加密是可以进行**对称解密**的
+
+> 对称加密: 即收发信双方采用用同样的**密钥**进行加密和解密；
+
+`eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9`
+
+
+### payload
+
+存放有效信息的地方。由三部分组成
+
+1. 标准中注册的声明？？
+2. 公共的声明？？
+3. 私有的声明 （声明指得是？）
+
+
+**标准中注册的声明**建议但是不强制使用
+
+- iss: jwt签发者
+- sub: jwt所面向的连接者
+- aub: 接收jwt的一方
+- exp: jwt的过期时间
+- nbf: 定义在什么时间之前，该jwt都是不可用的;
+- iat: jwt的签发时间
+- jti: jwt的唯一身份标识，主要用来作为一次性token, 从而回避重访攻击
+
+
+
+**公共的声明**
+
+该部分可以添加任何信息，一般添加用户的相关信息
+
+**私有的声明**
+
+
+### signature
+
+第三部分是一个签证信息，该签证信息由三部分组成
+1. header(base64后的)
+2. payload(base64后的)
+3. secret
+
+
+
+```js
+const encodeString = base64UrlEncode(header) + base64UrlEncode(payload)
+
+const signature = HMACSHA256(encodeString, 'secret')
+```
+
+
+将这三部分连接成一个完整的字符串，即构成最终的jwt
+
+> jwt是保存在服务器端，jwt的签发也是发生在服务器端的，secret就是用来进行jwt的签发和jwt的验证，所以他就是服务器端的私钥，任何场景都不应该泄露给客户端。
+> 一旦客户端得知这个secret, 那就意味着客户端可以自我签发jwt了
+
+
+[什么是 JWT -- JSON WEB TOKEN](https://www.jianshu.com/p/576dbf44b2ae)
