--- a/source/_posts/🍓前端知识分类/网络安全类/前端鉴权.md
+++ b/source/_posts/🍓前端知识分类/网络安全类/前端鉴权.md
@@ -2,20 +2,15 @@
 ## 为什么要鉴权？
 
 HTTP是一种无状态的请求，所以后端不能通过请求来区分和管理请求和响应，也就是说服务无法单从请求上知道客户身份，
-一半鉴权有三种方式
+
+鉴权有三种方式
 1. cookies
 2. session
-3. token(jwt 升级版)
+3. token(jwt token的升级版)
 
 
 
-## JWT(J)
 
-我理解是颁发给了一个证书，设置的限定时间内都可以随意访问，但是这个有效时间
-不要设置的太长了
-
-优点
-  1. 不需要操作数据库，直接代码里校验
 
 
 
@@ -154,6 +149,12 @@ const signature = HMACSHA256(encodeString, 'secret')
 
 > jwt是保存在服务器端，jwt的签发也是发生在服务器端的，secret就是用来进行jwt的签发和jwt的验证，所以他就是服务器端的私钥，任何场景都不应该泄露给客户端。
 > 一旦客户端得知这个secret, 那就意味着客户端可以自我签发jwt了
+
+
+
+
+优点
+  1. 不需要操作数据库，直接代码里校验
 
 
 [什么是 JWT -- JSON WEB TOKEN](https://www.jianshu.com/p/576dbf44b2ae)
