--- a/source/_posts/🐖小李的读书笔记/设计模式.md
+++ b/source/_posts/🐖小李的读书笔记/设计模式.md
@@ -1,9 +1,30 @@
+## 常见的设计模式
+1. 单例模式
+2. 策略模式
+3. 发布订阅者模式
+4. 代理模式
+5. 迭代器模式
+6. 中介者模式
+7. 享元模式
+8. 职责链模式
+9. 装饰着模式
+10. 状态模式
+11. 适配器模式
+12. 组合模式
+13. 模版方法模式
+14. 命令模式
+
+
+
+
+
 ## 多态处理
 
 1. 什么叫多态？
 > 对不同的对象执行统一操作，分别得到不同的结果；比如，操作让动物们，“叫”，鸭子🦆会“嘎嘎嘎”，牛🐂会“哞哞哞”；这就是多态；
 > 多态背后的思想是把 “做什么” 和 “谁去做怎么做” 分离开来， 即将 “不变的事物” 和 “可能改变的事物” 分离开
 > 将不变的部分和变化的部分隔开是每个设计模式的主题；
+
 
 
 
@@ -73,6 +94,7 @@ makeSound(new Cat())
 实现一个单例模式：
 - 要实现一个简单单例模式，可以使用一个变量来标志当前是否已经为某个类创建过对象， 如果是，则在下一次获取该类的实例时，直接返回之前创建的对象；
   
+
 ```js
 const Singleton = function(name) {
   this.name = name
@@ -228,3 +250,10 @@ calculateBonus('B', 1000) // 2000
 
 ## 代理模式
 
+
+
+
+
+## 参考文章
+
+1. 《JavaScript设计模式与开发实践-曾探》
