fix:删掉不必要的文件

--- a/source/_posts/🐖小李的读书笔记/设计模式.md
+++ b/source/_posts/🐖小李的读书笔记/设计模式.md
@@ -171,7 +171,9 @@ calculateBonus('B', 1000) // 2000
 
 
 
-解决方案：
+
+### 初级解决方案
+
 
 一般最容易想到的办法就是使用组合函数来重构代码, 把各种算法封装到一个个的小函
 数里来提高代码复用性；
@@ -210,17 +212,21 @@ calculateBonus('B', 1000) // 2000
 但是仍然有一个重要问题 => calculateBonus函数有可能越来越庞大，而且在系统变化的时候缺乏弹性。
 
 
+
+
 ### 使用策略重构代码
 
-> 策略模式指的是定义-系列的算法，把它们-一个个封装起来；
-> 策略模式的目的就是将算法的使用与算法的实现分离开来；
+> 策略模式指的是定义一系列的算法，把它们-一个个封装起来；
+> 策略模式的目的就是将**算法的使用与算法的实现**分离开来；
 
 在这个例子里，算法的使用方式是不变的，都是根据某个算法取得计算后的奖金数额。而算法的实现是各异和变化的，每种绩效对应着不同的计算规则；
 一个基于策略模式的程序至少由两部分组成。
-- 第一个部分是一 -组策略类 ,策略类封装了具体的算法，并负责具体的计算过程；
+- 第一个部分是一组策略类 ,策略类封装了具体的算法，并负责具体的计算过程；
 - 第二个部分是环境类Context, Context 接受客户的请求，随后把请求委托给某-个策略类。要做到这点，说明Context中要维持对某个策略对象的引用。
 
-**现在用策略模式来重构上面的代码**:
+
+**用策略模式来重构上面的代码**:
+
 
 ```js
 /* 每种绩效的计算规则都封装在对应的策略类里面 */
@@ -236,6 +242,7 @@ const strategies = {
   }
 }
 
+
 const calculateBonus = function(level, salary) {
   return strategies[level](salary)
 }
@@ -247,11 +254,83 @@ calculateBonus('B', 1000) // 2000
 ```
 
 
+## 发布-订阅模式
+
+实际场景：小明，小红，小花都想买房，他们三个互不认识，他们跑过去，可能房子还没发售，或者没有他们满意的户型；，
+所以呢，小李房产公司就想个办法，做好房后在公众号上发布推送消息，
+如果他们三个关注了小李房产公司的公众号，那么当小李推送了“房子发售啦”的消息后，所以订阅者就知道了，再过来买；
+
+--- 这就是发布订阅者模式
+
+发布订阅模式的实现步骤
+1. 首先指定好谁是发布者；
+2. 给发布者添加一个缓存队列，用来存放回调函数以便通知订阅者(爱吃烧饼名单)
+3. 最后执行发布消息动作；
+
+发布者可以在回调函数中填入一些参数，订阅者可以接收这些参数，比如房子单价、面积、户型等信息，订阅者接收到这些信息之后进行各自的处理；
+
+```js
+const salesoffices = {} // 小李房产公司公共号容器
+salesoffices.clientList = [] // 存放订阅者的回调函数
+
+// 小李房产公司被订阅
+salesoffices.listen = function(fn) {
+  this.clientList.push(fn) // 订阅的消息添加进缓存列表
+}
+// 小李房产公司发布消息
+salesoffices.trigger = function() {
+  for (var i = 0, fn; (fn = this.clientList[i++]); ) {
+    fn.apply(this, arguments) // arguments 是发布消息时带上的参数
+  }
+}
+/* TODO: 这里的订阅我感觉又带你问题 */
+/* 测试 */
+// 小明订阅消息
+salesoffices.listen(function(price, squareMeter) {
+  console.log('价格' + price)
+  console.log('squareMeter' + squareMeter)
+})
+
+// 小红订阅消息
+salesoffices.listen(function(price, squareMeter) {
+  console.log('价格' + price)
+  console.log('squareMeter' + squareMeter)
+})
+
+// 发布消息
+salesoffices.trigger(2000, 88)
+salesoffices.trigger(3000, 40)
+
+```
+
+这就是一个简单的发布-订阅模式，但是存在以下问题：
+
+1. 小明只想看 >100平 的房子； 小红只想看 <90平 的房子； 小花什么房都想看；但是小李房产公司会把所90平的房推送给小明，也会把130平的房推送给小红；这些多余的信息对于订阅者来说是干扰；
+
+所以我们可以加一个标示 key, 此订阅者只订阅自己感兴趣的消息
+
+```js
+
+```
+
+
 
 ## 代理模式
 
 
+## 设计原则和编程技巧
 
+1. 单一职责
+2. 最少知识原则
+3. 开放封闭
+
+
+4. 最少知识原则
+
+5. 代码重构
+   1. 少用三目运算符
+   2. 合理使用链式调用: 不便于调试
+   3. 
 
 
 ## 参考文章
