fix:修改部分文章细节

--- a/source/_posts/🍓前端知识分类/JS相关类/判断数据类型.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/判断数据类型.md
@@ -1,34 +1,41 @@
-## Object.prototype.toString.call
+```js
+/* 声明一些变量 */
+const a = null;
+const b = undefined;
+const c = new Number(2);
+const d = NaN;
+
+```
+
+# Object.prototype.toString.call
 
 - (最完美)，返回类型的字符串表示
 
-```javascript
-function checkType(value) {
-  return Object.prototype.toString.call(value);
-}
-
-checkType([])  // "[object Array]"
-checkType(new Map([['name',1],['age',2]]))  // "[object Map]"
-
+一些测试
+```js
+Object.prototype.toString.call(a)
+Object.prototype.toString.call(b)
+Object.prototype.toString.call(c)
+Object.prototype.toString.call(d)
 ```
 
 
-## typeof value
 
-1. 只能判断基本数据类型（undefine）
+# typeof value
+
+1. 只能判断基本数据类型 (undefined, null, )
 2. 除了Function,其他的使用能用new操作符创建的都是Object
-3. 变脸未声明返回'undefined'而不会抛出错误
+3. 变量未声明返回'undefined'而不会抛出错误
 
 
 ```javascript
-function checkType(value) {
-  return typeof value;
-}
-
-checkType([]) // "object"
-checkType(new Map([['name',1],['age',2]]))  // "object"
+/* 一些特殊例子 */
+typeof a // object
+typeof b // undefined
+typeof c // object 
+typeof d // number
 ```
 
-##  A instanceof B 
+#  A instanceof B 
 
 1. 用于判断A是否B的实例，即B是否在A的原型链上
