--- a/source/_posts/🍓前端知识分类/JS相关类/正则.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/正则.md
@@ -1,6 +1,6 @@
 😒正则这个东西，我真的是，学一百遍，忘一百遍
 
-## 常用正则
+# 常用正则
 
 ```js
 /* 校验邮箱格式 */
@@ -38,17 +38,30 @@ function checkUrlNumber() {
 
 
 
-## 方法
+# 方法
 
-1. exec() 在字符串中执行查找匹配的RegExp， 返回一个数据，未匹配到则返回一个null;
+正则相关的方法有:
+正则表达式的
+2. test
+1. exec
+字符串的
+1. match
+2. matchAll
+3. split
+4. replace
+5. 
 
+
+## test
+1. test() 测试字符串与RegExp是否匹配，若匹配，则返回true; 反之，返回false;
+
+测试是否是小数
 ```js
-const reg = /\w+/;
-reg.exec("ha....");     // [ 'ha', index: 0, input: 'ha....', groups: undefined ]
+const reg = /\d+\.\d+/;
+
+console.log(reg.test(1));     // false
+console.log(reg.test(1.2));   // true
 ```
-
-
-2. test() 测试字符串与RegExp是否匹配，若匹配，则返回true; 反之，返回false;
 
 ```js
 const reg = /[\w+]$/;
@@ -58,6 +71,14 @@ const reg = /[\.]$/;
 console.log(reg.test("ha...."));  // true
 ``` 
 
+
+
+2. exec() 在字符串中执行查找匹配的RegExp， 返回一个数据，未匹配到则返回一个null;
+
+```js
+const reg = /\w+/;
+reg.exec("ha....");     // [ 'ha', index: 0, input: 'ha....', groups: undefined ]
+```
 
 ## 字符串方法
 
