--- a/source/_posts/🍓前端知识分类/JS相关类/判断数据类型.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/判断数据类型.md
@@ -9,33 +9,35 @@ const d = NaN;
 
 # Object.prototype.toString.call
 
-- (最完美)，返回类型的字符串表示
+(最完美)，返回类型的字符串表示
 
 一些测试
 ```js
-Object.prototype.toString.call(a)
-Object.prototype.toString.call(b)
-Object.prototype.toString.call(c)
-Object.prototype.toString.call(d)
+Object.prototype.toString.call(a) // [object Null]
+Object.prototype.toString.call(b) // [object Undefined]
+Object.prototype.toString.call(c) // [object Number]
+Object.prototype.toString.call(d) // [object Number]
+Object.prototype.toString.call(e) // [object Symbol]
 ```
 
 
 
 # typeof value
 
-1. 只能判断基本数据类型 (undefined, null, )
-2. 除了Function,其他的使用能用new操作符创建的都是Object
+特点&缺点
+1. 只能判断基本数据类型 (Number, Boolean, String, undefined, Null, Symbol);
+2. 除了Function, 其他的使用能用`new`操作符创建的都是Object;
 3. 变量未声明返回'undefined'而不会抛出错误
-
 
 ```javascript
 /* 一些特殊例子 */
 typeof a // object
 typeof b // undefined
-typeof c // object 
+typeof c // object
 typeof d // number
+typeof e // symbol
 ```
 
-#  A instanceof B 
+#  A instanceof B
 
 1. 用于判断A是否B的实例，即B是否在A的原型链上
