--- a/source/_posts/🍓前端知识分类/未分类/框架通识.md
+++ b/source/_posts/🍓前端知识分类/未分类/框架通识.md
@@ -7,3 +7,44 @@
 2. V: view, 视图，即我们在页面看到的
 3. VM: viewmodel, 中介者，暴露model的公共属性和命令，处理其逻辑，从而控制视图，管理和呈现对象；
 
+
+# MVC
+
+数据流向
+
+<img src='http://www.ruanyifeng.com/blogimg/asset/2015/bg2015020105.png'>
+
+1. view传送指令到controller
+2. controller完成业务逻辑后，要求 Model 改变状态
+3. Model 将新的数据发送到 View，用户得到反馈
+
+
+# MVVM
+
+<img src='https://pic1.zhimg.com/80/v2-ff088222294499b3f30f0248fca38270_1440w.jpg?source=1940ef5c'>
+
+1. View 和 ViewModel 双向数据绑定，View的变动，自动反映在 ViewModel，反之亦然
+2. View 和 Model 不发生联系， 都通过 ViewModel 传递；
+3. View 非常薄，不部署任何业务逻辑代码；而 ViewModel 非常厚，所有逻辑都部署在这里；
+
+## 介绍
+
+MVVM 的核心是分离，通过 ViewModel 让 View 层和 Model 层解耦, 这么做有什么好处呢？ 初衷是想让设计师专注 View 层的设计和编写，软件工程师专注 Model 层的业务逻辑编写
+
+文章说，在Vue中的对应关系是
+View，即 templete 中的部分
+Model, 即 props、data 
+ViewModel, 即 Vue实例的一些方法
+
+为什么说VUE没有完全遵循MVVM呢?
+严格的MVVM，要求Model和view不能通信，但是在vue 中，可以在父组件的 Model 修改子组件的 View,?
+(我有点奇怪，这个 Model 对应的是 props、data， 那那些methods, 生命周期对应的哪部分？)
+
+## 优缺点
+1. 低耦合
+2. 可复用
+3. 独立开发
+4. 
+# 参考文章
+1. [为什么尤雨溪尤大说VUE没有完全遵循MVVM](https://www.zhihu.com/question/327050991)
+2. [MVC，MVP 和 MVVM 的图示](http://www.ruanyifeng.com/blog/2015/02/mvcmvp_mvvm.html)
