fix:修改源码学习目录

--- a/source/_posts/🍓前端知识分类/vue相关类/0源码-主线.md
+++ b/source/_posts/🍓前端知识分类/vue相关类/0源码-主线.md
@@ -1,90 +1,55 @@
-## new Vue
+## new Vue发生了什么
 
-当我们执行new Vue的时候，实际上会调用`init.js`执行一系列的初始化
-1. 合并options;
-2. 初始化data、生命周期、methods、等等;
+当我们执行new Vue的时候，实际上会调用`this._init`执行一系列的初始化
 
-## $mount
+Vue 初始化的过程做了几件事情，==合并配置==，==初始化生命周期==，==初始化事件中心，==初始化渲染==，==初始化 data、props、computed、watcher==等等
 
-```javascript
-if(complier版本){
 
-  /* doSomething to el */
-  if(el挂载在 body or html){
-    // 警告
-  }
+## Vue实例挂载的实现
 
-  /* 先，尝试获取templete(因为有多种定义templete) */
-  /* 然后，获取到之后，使用compileToFunctions将其编译为render函数 */
-
-  /* 最后，mount,挂载 */
-  return mount.call(this, el, hydrating)
-}
-```
+在原型上定义$mount方法，用来将 `templete` 字符串转换为 `render` 方法。要牢记，所有 Vue 组件的渲染最终都需要 render 方法；
+另外一个重要的过程就是实例化一个渲染Watcher，在他的毁掉函数中会调用updateComponent 方法，再次方法中调用 vm.render 方法生成虚拟DOM， 最终调用 vm._update 更新DOM
 
 
 ## render
 
+Vue的 `_render` 方法是实例的一个私有方法，他用来把实例对象渲染成一个虚拟 VNode
+
+`vm._render` 的实现，最终是通过执行 `createElement` 方法并返回vnode
+
+最关键的是 `render` 方法的调用，可以看到，render 函数中的 createElement 方法就是 vm.$createElement 方法
+
+`vm.$createElement` 方法定义是在执行 `initRender` 方法的时候，可以看到除了 `vm.$createElement` 方法，还有一个 `vm._c` 方法，它是被模板编译成的 render 函数使用，而 vm.$createElement 是用户手写 render 方法使用的， 这俩个方法支持的参数相同，并且内部都调用了 createElement 方法
+
+```js
+export function initRender (vm: Component) {
+  // ...
+  // bind the createElement fn to this instance
+  // so that we get proper render context inside it.
+  // args order: tag, data, children, normalizationType, alwaysNormalize
+  // internal version is used by render functions compiled from templates
+  vm._c = (a, b, c, d) => createElement(vm, a, b, c, d, false)
+  // normalization is always applied for the public version, used in
+  // user-written render functions.
+  vm.$createElement = (a, b, c, d) => createElement(vm, a, b, c, d, true)
+}
+```
+ 
 
 
-`render`函数会遇到两种情况：
-1. 模版类的化，调用 vm._c方法
-2. 手写的`render`, 调用`vm.$createElement`
-
-这两个方法的却比在于参数6，方法1是false, 方法2是true
-而这两个方法，最终都会调用 `createElement`方法，返回一个`VNode`
-
-
-<!-- 3. createElement:(在initRender阶段执行的) -->
-<!-- 将我们的DOM编译为virtual -->
-<!--  -->
-<!-- ```js -->
-<!-- <Templete> -->
-  <!-- <div id='page-container'> -->
-    <!-- {{ message }} -->
-  <!-- </div> -->
-<!-- <Templete/> -->
-<!--  -->
-<!-- <script> -->
-<!-- export default { -->
-  <!-- data(){ -->
-    <!-- return { -->
-      <!-- message: 'Hello World!' -->
-    <!-- } -->
-  <!-- } -->
-<!-- } -->
-<!-- </script> -->
-<!-- ``` -->
-
-<!-- 相当于 -->
-
-<!-- ```js -->
-<!-- /** -->
- <!-- * @des createElement -->
- <!-- * @param {Function} createElement  -->
- <!-- * @return:  -->
- <!-- */ -->
-<!-- render(createElement){ -->
-  <!-- return createElement('div', {    -->
-    <!-- attr: { -->
-      <!-- id: '#page-container' -->
-    <!-- } -->
-  <!-- }, this.message) -->
-<!-- } -->
-<!-- ``` -->
-
-2. proxy: (在initRender阶段执行的)
-对象访问做一个劫持，进行一些判断（如，变量render时未定义、模版否有多个根结点），然后发出一些警告
 
 ## virtual Node-VNode
 
 virtual Node 的出现是因为操作DOM是比较耗费性能的，于是有了virtual Node 来描述DOM，VNode是virtual Node 在vue中的具体应用（借鉴自开源库snabbdom）；
-VNode实际上是一个对象，去描述DOM结点。包含各种属性，如标签名、数据、子节点、键值等属性，还有一些用来拓展VNode的灵活性以及实现一些特殊的feature；
-由于VNode只是映射到真实DOM的渲染，不需要包含操作DOM的方法，所以他是非常轻量和简单的；
+
+VNode 是对真实 DOM 的一种抽象描述，它的核心定义无非就是几个关键属性，标签名、数据、子节点、键值等，其他属性都是用来扩展VNode 的灵活性以及水岸一些特殊 feature 的。由于 VNode 只是用来映射到真实 DOM 的渲染，不需要包含操作 DOM 的方法，因此他是非常轻量和简单。
 
 virtual Node 除了他的数据结构和定义，映射到真实的DOM实际上要经历VNode的create、diff、patch等过程；
+(在vue中，create ,即createElement；)
 
-在vue中，create ,即createElement；
+
+
+
 
 ## createElement
 
@@ -99,6 +64,9 @@ vue.js使用`createElement`创建`VNode`，定义在 `src/core/create-element.js
 回到 mountComponent 函数的过程，我们已经知道 `vm._render` 是如何创建了一个 `VNode`，接下来就是要把这个`VNode`渲染为一个真实的DOM并渲染出来，这个过程是通过 vm._update完成的;
 
 
+
+
+
 ## _update
 
 _update 方法的主要作用就是将 VNode 渲染为真实 DOM，定义在 `src/core/instance/lifecycle.js` 中；
@@ -107,6 +75,9 @@ _update 是vue 实例的一个私有方法，他被调用的时机有两个：
 2. 另一个是数据更新的时候；(响应式原理)
 
 详见 => _update.md
+
+
+
 
 
 ## 组件化
@@ -129,6 +100,9 @@ var app = new Vue({
 
 这段代码是使用render函数去渲染的，不同的是，这次通过 createElement 传入的是一个组件而不是一个原生的标签，如下继续分析这一过程；
 
+
+
+
 ## createComponent
 
 
@@ -139,6 +113,9 @@ createComponent 是实现组件化的关键
 2. 如果不是，则通过 createComponent 方法创建一个组件 VNode;
 
 详见 => 源码-createComponent.md 
+
+
+
 
 ## patch
 
@@ -153,6 +130,9 @@ patch的整体流程：
 
 详见 => 源码-patch.md
 
+
+
+
 ## 合并配置
 
 对于options的合并有两个阶段（合并之后的结果保存在 vm.$options中）：
@@ -164,6 +144,8 @@ patch的整体流程：
 详见 => 源码-合并配置.md
 
 
+
+
 ## 生命周期
 
 主要学习 Vue 生命周期中哥哥钩子函数的执行时机以及顺序
@@ -172,11 +154,15 @@ patch的整体流程：
 详见 => 源码-生命周期.md
 
 
+
+
 ## 组件注册
 
 了解全局注册和局部注册的区别
 
 详见 => 源码-组件注册.md
+
+
 
 
 ## 异步组件
@@ -188,17 +174,31 @@ patch的整体流程：
 当异步获取组件成功后，再通过 forceRender 强制重新渲染，这样就能正确渲染出我们异步加载的组件了
 
 
+
+
+
 ## 响应式原理
 
-响应式对象是利用 Object.defineProperty() 给对象的属性添加 getter 和 setter
-Vue会把 props 和 data 等变成响应式对象，在创建过程中若发现子属性也为对象，则递归把该对象变成响应式；
-get: 依赖收集
-set: 
+响应式对象的实现利用 `Object.defineProperty()` 递归给对象的所有属性添加 getter 和 setter，这样无论 `obj` 结构多复杂，他的所有子属性也能变成响应式对象;
+这样我们访问或修改 obj 中一个嵌套较深的属性，也能触发getter、setter, 这样做的目的是为了在读取数据个写数据的时候执行一些逻辑（数据劫持）；
+
+getter: 依赖收集
+setter: 派发更新
+
+
+
+
 
 
 ## 依赖收集
 
-依赖收集就是订阅数据变化的wather的收集
-依赖收集的目的是为了当这些响应式数据发生变化的时候，触发他们的setter的时候，能知道应该通知哪些订阅者去做相应的逻辑处理；
+收集依赖的目的是为了当这些响应式数据发送变化，触发它们的 setter 的时候，能知道应该通知哪些订阅者去做相应的逻辑处理，我们把这个过程叫派发更新，其实 Watcher 和 Dep 就是一个非常 经典的观察者设计模式的实现
+
+
+详见=> 依赖收集.md
+
+  
+
 
 ## 派发更新
+## 计算属性 VS 侦听属性
