--- a/source/_posts/🍓前端知识分类/JS相关类/异步函数的执行顺序问题.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/异步函数的执行顺序问题.md
@@ -7,9 +7,9 @@
 
 # 精细划分
 
-- 宏任务：IO/setTimeout/serInterval
-- 微任务：promise.then(catch/finally)
-- （注：promise是声明立即执行）
+- 宏任务：IO设备事件/setTimeout/serInterval
+- 微任务：promise.then(catch/finally), MutationObserver
+- （注：promise是声明立即执行， .then 是微任务）
 
 #### 执行顺序
 
@@ -23,6 +23,7 @@
     - 遇到微任务 >> 放在微任务队列
 - （同级的微任务队列中没有微任务）再返回执行宏任务
     - 拿出一个宏任务，按照上面的步骤执行即可
+
 ！宏任务的队列是全局的
 ！同级的微任务队列没有微任务时再去查找宏任务队列
 
